<resources>
    <string name="app_name">tcaResit</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_menu_page">menuPage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="create_list">Create List</string>
    <string name="calculator">Calculator</string>
    <string name="game">Game</string>
    <string name="number_here">Number here...</string>
    <string name="game_rule">Type in a number between 1 to 20 and see if you guess the number!</string>
    <string name="compare_numbers">Compare numbers</string>
    <string name="number">Number</string>
    <string name="add">Add</string>
    <string name="subtract">Subtract</string>
    <string name="multiply">Multiply</string>
    <string name="divide">Divide</string>
</resources>