<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/teal_700"
    tools:context=".calculator">


    <TextView
        android:id="@+id/textCalculator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:text="@string/calculator" />

    <EditText
        android:id="@+id/number1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:minHeight="48dp"
        android:hint="@string/number"
        android:textAlignment="center"
        android:layout_marginHorizontal="140dp"
        android:layout_marginTop="80dp"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/number2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@color/black"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:layout_marginHorizontal="140dp"
        android:layout_marginTop="10dp"
        android:hint="@string/number"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="65dp"
        android:textSize="20sp"
        android:text="@string/add" />

    <Button
        android:id="@+id/subtractButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:layout_marginTop="-50dp"
        android:layout_marginStart="220dp"
        android:textSize="20sp"
        android:text="@string/subtract" />

    <Button
        android:id="@+id/multiplyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:textSize="20sp"
        android:layout_marginStart="38dp"
        android:text="@string/multiply" />

    <Button
        android:id="@+id/divideButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-50dp"
        android:minHeight="50dp"
        android:textSize="20sp"
        android:layout_marginStart="242dp"
        android:text="@string/divide" />

    <TextView
        android:id="@+id/calculatorOutcome"
        android:layout_width="match_parent"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        android:textAlignment="center"
        android:layout_height="wrap_content" />


</LinearLayout>