<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/teal_700"
    tools:context=".menuPage">


    <Button
        android:id="@+id/fileButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="75dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="215dp"
        android:paddingVertical="25dp"
        android:textSize="20sp"
        android:text="@string/create_list" />

    <Button
        android:id="@+id/calculatorButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="75dp"
        android:layout_marginBottom="5dp"
        android:paddingVertical="25dp"
        android:textSize="20sp"
        android:text="@string/calculator" />

    <Button
        android:id="@+id/gameButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="75dp"
        android:layout_marginBottom="5dp"
        android:paddingVertical="25dp"
        android:textSize="20sp"
        android:text="@string/game" />
</LinearLayout>