<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/teal_700"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/loginText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="60sp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:layout_marginTop="15dp"
        android:text="@string/login" />

    <EditText
        android:id="@+id/loginUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginHorizontal="45dp"
        android:layout_marginTop="180dp"
        android:textColorHint="#000000"
        android:minHeight="48dp"
        android:hint="@string/username"
        android:textAlignment="center"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="45dp"
        android:minHeight="48dp"
        android:textColorHint="#000000"
        android:ems="10"
        android:hint="@string/password"
        android:textAlignment="center"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="120dp"
        android:layout_marginTop="25dp"
        android:text="login" />

</LinearLayout>